--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,16 @@ hr {
   border-width: 5px;
 
 }
+
+a:link {
+  color: white;
+  text-decoration: none;
+}
+a:hover {
+  color: white;
+  text-decoration: none;
+}
+a:active {
+  color: blue;
+  text-decoration: none;
+}
